# Ghost-In-The-Shell

./: .env.template  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  README.md  SECURITY.md  app.py  architecture.md  config.py  db.json  db_util.py  install.sh  logger.py  main.py  products.csv  pyproject.toml  readme.md  requirements.txt  run.sh  test.sh  ui.py
api/: chat.py  jsonchat.py  task.py
backup/: mca.py  semantic search.ipynb
backup/lib/: openai.py  parse_prompt.py  pragma.py
flows/: __init__.py  audio.py  db.py  image.py  os.py  tasks.py
future/frank/: build_grammar.py  fastapi scraper.ipynb  main.py  parse_file.py  prototype.md  requirements.txt
future/local server/: config.py  requirements.txt  server-batch.py
future/shell_gpt/: .command_history  pyproject.toml
ghost/agents/: tooluser.py
ghost/core/: chatllm.py  router.py
ghost/routes/: ai_search.py  analyst.py  assistant.py  automaton.py  business_analyst.py  catalog.py  code.py  customer support.py  customer.py  customer_support.py  download.py  download_fastapi_docs.py  dynamic pricing.py  img_gen.py  intents.py  personas.py  prd.py  rag.py
ghost/schema/: agent.py
ghost/tools/: autonomous agent.ipynb  personas.py  python.py  wowapp.py  (+1 more)
model/: db.py  io.py  llm.py  tool.py
new-streamlit-era/: run.py
streamlit-era/: LICENSE  app.py  requirements-test.txt  requirements.txt
streamlit-era/future/frank/: highlight_syntax.py  main_ast.py  pyproject.toml
streamlit-era/future/frank/backup/: parse.py  readme2.md
tests/: conftest.py  test_chat.py  test_jsonchat.py  test_task.py
(+81 files in other folders)
